@@ -8,6 +8,8 @@ Changelog
  * Fix: Using `order_by_relevance=False` when searching with PostgreSQL now works (Mitchel Cabuloy)
  * Fix: Inline panel first and last sorting arrows correctly hidden in non-default tabs (Matt Westcott)
  * Fix: `WAGTAILAPI_LIMIT_MAX` now accepts None to disable limiting (jcronyn)
+ * Fix: In PostgreSQL, new default ordering when ranking of objects is the same (Bertrand Bordage)
+
 
 1.12 LTS (21.08.2017)
 ~~~~~~~~~~~~~~~~~~~~~
